@startuml
' Bounded Context: hcm
' Compact view: aggregates, services, repositories, controllers.
' Individual commands/queries/resources/assemblers are omitted for readability.

left to right direction
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 50
skinparam shadowing false
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor White
  ArrowColor #444444
  BorderColor #333333
}

package "domain.model.aggregates" {
  class Staff {
    +StaffId id
    +PersonProfileId profileId
    +StaffStatus status
    +StaffRole role
    +List<Contract> contracts
    +ContractHistory contractHistory
  }
}

package "domain.model.entities" {
  class Contract {
    +ContractId id
    +ContractPeriod period
    +ContractStatus status
    +TypeOfContract type
  }
}

package "domain.model.events" {
  class EmployeeHiredEvent
  class EmployeeSuspendedEvent
  class EmployeeTerminationEvent
}

package "domain.services" {
  interface StaffCommandServices
  interface StaffQueryServices
}

package "application (command/query services)" {
  class StaffCommandServiceImpl
  class StaffQueryServiceImpl
}

package "application.outboundservices.acl" {
  interface ExternalNursingService
  interface ExternalProfileService
}

package "infrastructure.persistence.jpa.repositories" {
  interface StaffRepository
}

package "interfaces.rest" {
  class NursingHomeStaffController
  class StaffContractHistoryController
  class StaffController
}

' Relationships
Staff *-- Contract : "has 0..*"

StaffRepository --> Staff

StaffCommandServices <|.. StaffCommandServiceImpl
StaffQueryServices <|.. StaffQueryServiceImpl

StaffCommandServiceImpl --> StaffRepository
StaffQueryServiceImpl --> StaffRepository
StaffCommandServiceImpl --> ExternalNursingService
StaffCommandServiceImpl --> ExternalProfileService
StaffQueryServiceImpl --> ExternalProfileService

NursingHomeStaffController --> StaffQueryServices
StaffController --> StaffCommandServices
StaffContractHistoryController --> StaffQueryServices

' Events emitted by aggregate
Staff ..> EmployeeHiredEvent : emits
Staff ..> EmployeeSuspendedEvent : emits
Staff ..> EmployeeTerminationEvent : emits

@enduml